--- a/MQ163FirstShot/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/MQ163FirstShot/en.lproj/MainStoryboard_iPhone.storyboard
@@ -26,16 +26,19 @@
                                             <segment title="Customers"/>
                                             <segment title="All"/>
                                         </segments>
+                                        <connections>
+                                            <action selector="segmentedControlIndexChanged" destination="2" eventType="valueChanged" id="0zv-Yl-WZ4"/>
+                                        </connections>
                                     </segmentedControl>
                                 </navigationItem>
                             </items>
                         </navigationBar>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" indentationWidth="10" reuseIdentifier="personTemplate" textLabel="FWi-ce-Ovd" detailTextLabel="vRt-f9-RhZ" style="IBUITableViewCellStyleSubtitle" id="olu-Kk-g4t">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="personTemplate" textLabel="FWi-ce-Ovd" detailTextLabel="vRt-f9-RhZ" style="IBUITableViewCellStyleSubtitle" id="olu-Kk-g4t">
                                 <rect key="frame" x="0.0" y="66" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="300" height="43"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FWi-ce-Ovd">
@@ -55,6 +58,9 @@
                         </prototypes>
                     </tableView>
                     <tabBarItem key="tabBarItem" title="Create" image="112-group.png" id="7"/>
+                    <connections>
+                        <outlet property="segmentedControl" destination="gCK-1w-bYB" id="0vU-4Q-ZCk"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="10" sceneMemberID="firstResponder"/>
             </objects>
@@ -116,6 +122,10 @@
     <classes>
         <class className="MQFirstViewController" superclassName="UITableViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/MQFirstViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="segmentedControlIndexChanged"/>
+                <relationship kind="outlet" name="segmentedControl" candidateClass="UISegmentedControl"/>
+            </relationships>
         </class>
         <class className="MQSecondViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/MQSecondViewController.h"/>
