--- a/MQ163FirstShot/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/MQ163FirstShot/en.lproj/MainStoryboard_iPhone.storyboard
@@ -57,14 +57,14 @@
                             </tableViewCell>
                         </prototypes>
                     </tableView>
-                    <tabBarItem key="tabBarItem" title="Create" image="112-group.png" id="7"/>
+                    <tabBarItem key="tabBarItem" title="Customers &amp; Leads" image="112-group.png" id="7"/>
                     <connections>
                         <outlet property="segmentedControl" destination="gCK-1w-bYB" id="0vU-4Q-ZCk"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="10" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="653" y="-138"/>
+            <point key="canvasLocation" x="261" y="-702"/>
         </scene>
         <!--Second View Controller - Second-->
         <scene sceneID="13">
@@ -89,11 +89,41 @@
                             <constraint firstAttribute="centerY" secondItem="23" secondAttribute="centerY" type="user" id="llH-eD-iPS"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Engineer" image="20-gear2.png" id="6"/>
+                    <tabBarItem key="tabBarItem" title="Merchandise" image="154-necktie.png" id="6"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="12" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="653" y="513"/>
+            <point key="canvasLocation" x="261" y="-51"/>
+        </scene>
+        <!--Table View Controller - Engineer-->
+        <scene sceneID="dua-Qb-Yju">
+            <objects>
+                <tableViewController id="pwi-le-qti" sceneMemberID="viewController">
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="wsw-HH-dpS">
+                        <rect key="frame" x="0.0" y="20" width="320" height="499"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="3fx-0U-1Mm">
+                                <rect key="frame" x="0.0" y="22" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                </view>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="pwi-le-qti" id="3sf-1f-BX4"/>
+                            <outlet property="delegate" destination="pwi-le-qti" id="ZQt-Ta-S63"/>
+                        </connections>
+                    </tableView>
+                    <tabBarItem key="tabBarItem" title="Engineer" image="91-beaker-2.png" id="AIp-pZ-dTb"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="uUb-hm-QlA" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="261" y="622"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="15">
@@ -108,16 +138,18 @@
                     <connections>
                         <segue destination="2" kind="relationship" relationship="viewControllers" id="26"/>
                         <segue destination="3" kind="relationship" relationship="viewControllers" id="27"/>
+                        <segue destination="pwi-le-qti" kind="relationship" relationship="viewControllers" id="Qoz-9F-Tdh"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="14" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="132" y="180"/>
+            <point key="canvasLocation" x="-380" y="-51"/>
         </scene>
     </scenes>
     <resources>
         <image name="112-group.png" width="32" height="21"/>
-        <image name="20-gear2.png" width="26" height="28"/>
+        <image name="154-necktie.png" width="8" height="27"/>
+        <image name="91-beaker-2.png" width="20" height="24"/>
     </resources>
     <classes>
         <class className="MQFirstViewController" superclassName="UITableViewController">
