--- a/MQ163FirstShot/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/MQ163FirstShot/en.lproj/MainStoryboard_iPhone.storyboard
@@ -175,12 +175,12 @@
                             <constraint firstItem="SQL-3f-poU" firstAttribute="top" secondItem="saa-9n-xt3" secondAttribute="top" type="default" id="7lI-kB-ynf"/>
                             <constraint firstItem="r1T-d4-2hM" firstAttribute="leading" secondItem="saa-9n-xt3" secondAttribute="leading" constant="6" id="BHt-xd-XKi"/>
                             <constraint firstItem="jFe-Dy-3ty" firstAttribute="top" secondItem="saa-9n-xt3" secondAttribute="top" constant="178" id="GAT-xr-mDC"/>
-                            <constraint firstItem="sbJ-gR-aeo" firstAttribute="top" secondItem="ghv-nd-72X" secondAttribute="top" type="default" id="IMF-8g-Bho"/>
                             <constraint firstItem="SQL-3f-poU" firstAttribute="trailing" secondItem="saa-9n-xt3" secondAttribute="trailing" type="default" id="Iq3-zM-7Dv"/>
                             <constraint firstItem="yqw-Bk-A5C" firstAttribute="trailing" secondItem="Wtu-ZH-vXo" secondAttribute="trailing" type="default" id="JpM-ya-9Kj"/>
                             <constraint firstItem="Wtu-ZH-vXo" firstAttribute="top" secondItem="saa-9n-xt3" secondAttribute="top" constant="104" id="KnM-9U-4bM"/>
                             <constraint firstItem="1Pj-uR-75c" firstAttribute="leading" secondItem="saa-9n-xt3" secondAttribute="leading" constant="115" id="SWv-U6-xxl"/>
                             <constraint firstItem="1Pj-uR-75c" firstAttribute="trailing" secondItem="ghv-nd-72X" secondAttribute="trailing" type="default" id="fBm-Kr-auu"/>
+                            <constraint firstItem="ghv-nd-72X" firstAttribute="top" secondItem="saa-9n-xt3" secondAttribute="top" constant="54" id="fqm-TU-1kk"/>
                             <constraint firstItem="1Pj-uR-75c" firstAttribute="top" secondItem="saa-9n-xt3" secondAttribute="top" constant="153" id="nys-pY-Y9L"/>
                             <constraint firstItem="sbJ-gR-aeo" firstAttribute="leading" secondItem="saa-9n-xt3" secondAttribute="leading" constant="108" id="pKE-XB-imh"/>
                             <constraint firstItem="Wtu-ZH-vXo" firstAttribute="leading" secondItem="Q71-Ji-ecO" secondAttribute="leading" type="default" id="qOo-F2-aza"/>
@@ -351,38 +351,6 @@
         <image name="168-upload-photo-2.png" width="22" height="25"/>
         <image name="91-beaker-2.png" width="20" height="24"/>
     </resources>
-    <classes>
-        <class className="MQFirstViewController" superclassName="UITableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/MQFirstViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="segmentedControlIndexChanged"/>
-                <relationship kind="outlet" name="segmentedControl" candidateClass="UISegmentedControl"/>
-            </relationships>
-        </class>
-        <class className="MQSecondViewController" superclassName="UITableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/MQSecondViewController.h"/>
-        </class>
-        <class className="MQViewController1Step2" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/MQViewController1Step2.h"/>
-            <relationships>
-                <relationship kind="action" name="selectImageButtonClicked:"/>
-                <relationship kind="action" name="sliderMoved:"/>
-                <relationship kind="action" name="uploadButtonClicked:"/>
-                <relationship kind="outlet" name="buttonUpload" candidateClass="UIButton"/>
-                <relationship kind="outlet" name="contentSlider" candidateClass="UISlider"/>
-                <relationship kind="outlet" name="image" candidateClass="UIImageView"/>
-                <relationship kind="outlet" name="imagePicker" candidateClass="UIImagePickerController"/>
-                <relationship kind="outlet" name="labelCar" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="labelFeatures" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="labelUserName" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="selectImage" candidateClass="UIBarButtonItem"/>
-                <relationship kind="outlet" name="tagText" candidateClass="UILabel"/>
-            </relationships>
-        </class>
-        <class className="NSLayoutConstraint" superclassName="NSObject">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
-        </class>
-    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
